fix: code overflow fix not applied

--- a/doc/custom.scss
+++ b/doc/custom.scss
@@ -26,8 +26,8 @@ div.sourceCode {
     }
 }
 
-pre {
-    code {
+pre.sourceCode {
+    code.sourceCode {
         overflow: auto;
     }
 }
